# Astrostellar-Attack

./: CMakeLists.txt  README.md  normalize_mesh.py  sources.txt
include/: asteroid.h  camera.h  enemy_node.h  enemyobj.h  game.h  gameobj.h  geometry.h  hudobj.h  path_config.h  player_node.h  playerobj.h  projectile_node.h  projectileobj.h  resource.h  resource_manager.h  rotation.h  scene_graph.h  scene_node.h  transformation.h
include/attribute/: orientation.h  sound.h  text.h
include/node/: hud_node.h  particle_node.h  scene_node.h  skybox_node.h
include/node/entity/: entity_node.h  player_node.h  projectile_node.h
include/node/entity/agent/: agent_node.h
include/node/entity/agent/enemy/: boss_node.h  enemy_node.h
include/node/entity/agent/player/: player_node.h
include/node/entity/enemy/: enemy_node.h
include/node/entity/obstacle/: asteroid_node.h  comet_node.h  obstacle_node.h  satellite_node.h
include/node/entity/player/: player_node.h
include/node/screen/: button_node.h  hud_node.h  radar_node.h  screen_node.h
include/setup/: model_loader.h  path_config.h  resource.h  resource_manager.h
include/world/: camera.h  game.h  scene_graph.h  scene_menu.h
libraries/nlohmann/: json.hpp
resource/: fragment_shader.glsl  mesh_vp.glsl  particle_comet_fp.glsl  particle_comet_gp.glsl  particle_stream_fp.glsl  particle_stream_gp.glsl  particle_stream_vp.glsl  radar_fp.glsl  screen_fp.glsl  skybox_fp.glsl  skybox_vp.glsl  text_fp.glsl  textured_normal_material_fp.glsl
resource/particle/: particle_comet_vp.glsl  particle_explosion_fp.glsl  particle_explosion_gp.glsl  particle_explosion_vp.glsl  particle_stream_gp.glsl  particle_stream_vp.glsl
resource/screen/: screen_space_bloom_fp.glsl  screen_space_boost_fp.glsl  screen_space_health_fp.glsl
resource/shader/: colored_fp.glsl  overlay_fp.glsl  radar_fp.glsl  screen_fp.glsl  screen_vp.glsl  textured_material_fp.glsl  textured_normal_material_vp.glsl
saves/: asset_data.json  game_state.json  game_state_default.json
src/: asteroid.cpp  camera.cpp  enemy_node.cpp  enemyobj.cpp  game.cpp  gameobj.cpp  geometry.cpp  hudobj.cpp  main.cpp  player_node.cpp  playerobj.cpp  projectile_node.cpp  projectileobj.cpp  resource_manager.cpp  rotation.cpp  scene_graph.cpp  scene_node.cpp  transformation.cpp
src/attribute/: orientation.cpp  sound.cpp  text.cpp
src/node/: hud_node.cpp  particle_node.cpp  scene_node.cpp  skybox_node.cpp
src/node/entity/: enemy_node.cpp  entity_node.cpp  player_node.cpp  projectile_node.cpp
src/node/entity/agent/: agent_node.cpp
src/node/entity/agent/enemy/: boss_node.cpp  enemy_node.cpp
src/node/entity/agent/player/: player_node.cpp
src/node/entity/enemy/: enemy_node.cpp
src/node/entity/obstacle/: asteroid_node.cpp  comet_node.cpp  obstacle_node.cpp  satellite_node.cpp
src/node/entity/player/: player_node.cpp
src/node/screen/: button_node.cpp  radar_node.cpp  screen_node.cpp
src/setup/: resource.cpp  resource_manager.cpp
src/world/: camera.cpp  game.cpp  scene_graph.cpp
